--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,7 @@ footnotereturnlinkcontents = "↩"
 MetaDataFormat = "yaml" # format of a new post
 enableGitInfo = false
 publishDir = "docs"
+output_dir: "docs"
 
 [markup]
   defaultMarkdownHandler = "goldmark"
